[tool.poetry]
name = "code-coffee-algorithms"
version = "0.1.0"
description = ""
authors = ["Piotr Gryko <piotr.gryko@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
freezegun = "^1.5.1"
pre-commit = "^3.7.1"
pycodestyle = "^2.11.1"
flake8 = "^7.0.0"
ruff = "^0.4.4"

[tool.poetry.group.dev.dependencies]
click = "^8.1.7"
ipdb = "^0.13.13"
ipython = "^8.24.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
#Disabled because of upgrade from black 23 to black 24
#multi_line_output = 3
#include_trailing_comma = true
#force_grid_wrap = 0
#use_parentheses = true
#ensure_newline_before_comments = true
line_length = 88
exclude = '''
/(
  | migrations
  | \.venv
  | \venv
  | external
)/
'''

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "**/node_modules/**",
    "venv",
    ".venv",
    "**/migrations/**",
    "external/**",
]


[tool.coverage.run]
omit = [
  "**/__init__.py",
  "**/tests/**",
  "**/tests.py",
  "**/migrations/**",
  "**/fixtures/**",
  "**/admin/**",
  "**/manage.py",
  "**/settings/**",
  "**/settings.py",
  "**/asgi.py",
  "**/wsgi.py",
  ".venv/**",
  "venv/**",
  "external/**",
]

